# dygest

./: .env.example  .gitignore  LICENSE  README.md  dygest_config.yaml  pyproject.toml  setup.cfg  setup.py
docs/: _config.yml  config.md  index.md  setup.md
dygest/: cli.py  config.py  core.py  json_schemas.py  llms.py  ner_utils.py  output_utils.py  prompts.py  templates.py  translations.py  utils.py
dygest/static/css/: plain.css  tabs.css
examples/: embeddings_What_they_are_and_why_they_matter_en.json
src/: cli.py  llms.py  output_utils.py  templates.py  utils.py
templates/plain/: plain.css  plain.html
templates/tabs/: tabs.css  tabs.html  tabs.js
templates/test/: test.css  test.html
