[metadata]
name = dygest
version = 0.4.1
author = Thomas Schmidt
description = DYGEST: Document Insights Generator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tsmdt/dygest
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10
install_requires =
    typer==0.15.1
    tiktoken==0.8.0
    beautifulsoup4==4.12.3
    flair==0.15.0
    tqdm==4.67.1
    langdetect==1.0.9
    json_repair==0.31.0
    litellm==1.54.1

[options.entry_points]
console_scripts =
    dygest=dygest.cli:app

[options.packages.find]
where = .